# tf-risk-review

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rule_proposal.yml
.github/workflows/: ci.yml  release.yml
docs/: rego.md  rules.md
docs/adr/: 0001-deterministic-gate-advisory-ai.md  0002-redaction-at-parse-boundary.md  0003-opa-as-external-adapter.md
examples/plans/: mass-delete.json  risky-change.json  safe-change.json
policies/: provider_allowlist.rego  required_tags.rego
src/tf_risk_review/: __init__.py  cli.py  config.py  github.py  models.py  parser.py
src/tf_risk_review/policy/: opa.py
src/tf_risk_review/render/: json_out.py  markdown.py  text.py
src/tf_risk_review/rules/: base.py  deletions.py  engine.py  iam.py  network.py  storage.py
src/tf_risk_review/summary/: llm.py  prompts.py
src/tf_sentry/: __init__.py  cli.py  config.py  github.py  models.py  parser.py
src/tf_sentry/policy/: opa.py
src/tf_sentry/render/: json_out.py  markdown.py  text.py
src/tf_sentry/rules/: base.py  deletions.py  engine.py  iam.py  network.py  storage.py
src/tf_sentry/summary/: llm.py  prompts.py
tests/: factories.py
tests/corpus/: test_corpus.py
tests/opa/: test_rego_policies.py
tests/unit/: test_cli.py  test_config.py  test_engine_and_render.py  test_parser.py  test_rules_deletions.py  test_rules_iam.py  test_rules_network_storage.py  test_summary_and_github.py
